--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -12,6 +12,8 @@ body, html {
     background-color: var(--main-color);
     box-sizing: border-box;
     color: white;
+    font-size: 100%;
+    scroll-behavior: smooth;
 }
 
 .bm-burger-button {
@@ -125,7 +127,7 @@ body, html {
   grid-template-rows: 25% 1% 59%  15%;
   grid-template-areas: "name name" "hr hr" "desc icons" "language language";
   place-items: center start;
-  padding: 15px;
+  padding: 20px;
   gap: 5px;
   background-color: var(--secondary-color);
   border-radius: 5px;
@@ -163,6 +165,7 @@ body, html {
     
     p {
       margin: 5px;
+      font-weight: bold;     
     }
   }
   
@@ -172,9 +175,10 @@ body, html {
     height: 100%;
     span {
       background-color: var(--secondary-contrast-color);
-      padding: 0.3rem;
+      padding: 0.3rem 0.5rem;
       color: var(--secondary-color);
       border-radius: 50px;
+      font-weight: bold;
     }
   }
 }
