--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -6,7 +6,7 @@
 }
 body, html {
     margin: 0;
-    height: 100%;
+    height: 100vh;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: var(--main-color);
@@ -14,6 +14,7 @@ body, html {
     color: white;
     font-size: 100%;
     scroll-behavior: smooth;
+    
 }
 
 .bm-burger-button {
@@ -185,17 +186,109 @@ body, html {
 
 .projectsWrapper {
   margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 60%;
-  a {
-    margin: 30px;
-    width: calc(50% - 60px);
-    text-decoration: none;
-    color: white;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 60%;
+    a {
+      margin: 30px;
+      width: calc(50% - 60px);
+      text-decoration: none;
+      color: white;
+    }
+}
+
+.footer {
+  width: 100%;
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactWrapper {
+  width: 60%;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.contactTitle {
+  background-color: var(--secondary-color);
+  padding: 0.75rem;
+  font-size: 125%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.contactForm {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  input, textarea {
+    border: none;
+    border-radius: 3px;
+    padding: 10px;
+    resize: vertical;
+    outline: none;
+    box-sizing: content-box;
+    border-bottom: solid 3px transparent;
+    margin: 5px 0;
+    margin-bottom: 1rem;
+  }
+  textarea {
+    height: 130px;
+  }
+  label {
+    font-weight: 600;
+  }
+  input:focus, textarea:focus {
+    border-bottom: solid 3px var(--contrast-color);
   }
 }
 
 
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.submit__button {
+  background-color: var(--contrast-color);
+}
+
+.contact-list {
+  list-style-type: none;
+  padding-right: 20px;
+}
+
+.list-item {
+  line-height: 4;
+  color: white;
+}
+
+.contact-text {
+  font: 300 16px 'Lato', sans-serif;
+  letter-spacing: 1.9px;
+  color: white;
+  transition: all 0.3s;
+  text-align: center;
+}
+
+.place {
+  margin-left: 32px;
+}
+
+.phone {
+  margin-left: 25px;
+}
+
+.gmail {
+  margin-left: 26px;
+}
