--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,22 +1,20 @@
 :root {
-    --main-color: #171717;
-    --secondary-color: #292929;
-    --contrast-color: #0264b5;
-    --secondary-contrast-color: #00b7ff;
+  --main-color: #171717;
+  --secondary-color: #292929;
+  --contrast-color: #0264b5;
+  --secondary-contrast-color: #00b7ff;
 }
 body, html {
-    margin: 0;
-    height: 100vh;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--main-color);
-    box-sizing: border-box;
-    color: white;
-    font-size: 100%;
-    scroll-behavior: smooth;
-    
+  margin: 0;
+  height: 100vh;
+  padding: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--main-color);
+  box-sizing: border-box;
+  color: white;
+  font-size: 100%;
+  scroll-behavior: smooth;
 }
-
 .bm-burger-button {
   position: fixed;
   width: 36px;
@@ -25,13 +23,11 @@ body, html {
   top: 36px;
   color: white;
 }
-
 .bm-cross-button {
   width: 36px;
   height: 36px;
   color: white;
 }
-
 .bm-menu {
   background: var(--secondary-color);
   padding: 2.5em 1em 0;
@@ -41,27 +37,25 @@ body, html {
   color: #b8b7ad;
   height: fit-content !important;
   .bm-item {
-    width: 100%;
-    box-sizing: border-box;
-    margin: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  }
+      width: 100%;
+      box-sizing: border-box;
+      margin: 0;
+      border-top: 1px solid rgba(0, 0, 0, 0.3);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+ }
   a {
-    text-decoration: none;
-    color: var(--contrast-color);
-    transition: all 0.3s;
-    &:hover {
-      color: var(--secondary-contrast-color);
-      background: rgba(0, 0, 0, 0.3)
-
-    }
-  }
+      text-decoration: none;
+      color: var(--contrast-color);
+      transition: all 0.3s;
+      &:hover {
+          color: var(--secondary-contrast-color);
+          background: rgba(0, 0, 0, 0.3) 
+     }
+ }
 }
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
-
 .intro {
   width: 100%;
   height: 100vh;
@@ -73,21 +67,19 @@ body, html {
   overflow: hidden;
   text-align: center;
 }
-
 .svgwrapper {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-	margin: 0 auto;
+  margin: 0 auto;
   width: fit-content;
   &:hover .shape {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 760;
-    stroke: var(--secondary-contrast-color);
-  }
+      stroke-dashoffset: 0;
+      stroke-dasharray: 760;
+      stroke: var(--secondary-contrast-color);
+ }
 }
 .shape {
-  
   stroke-dasharray: 140 540;
   stroke-dashoffset: -474;
   stroke-width: 8px;
@@ -96,7 +88,6 @@ body, html {
   border-bottom: 5px solid black;
   transition: stroke-dashoffset 0.8s, stroke-dasharray 0.8s, stroke 0.8s;
 }
-
 .text {
   line-height: 32px;
   letter-spacing: 8px;
@@ -105,19 +96,15 @@ body, html {
   position: relative;
   top: -48px;
 }
-
 ::-webkit-scrollbar {
   width: 10px;
-
 }
 ::-webkit-scrollbar-track {
   background: transparent;
 }
-
 ::-webkit-scrollbar-thumb {
   background: var(--contrast-color);
 }
-
 .desc::-webkit-scrollbar {
   width: 4px;
   height: 10px;
@@ -128,62 +115,60 @@ body, html {
   height: 100%;
   background-color: var(--contrast-color);
 }
+
+.hoverAnim {
+  &:hover, &:focus {
+    box-shadow: 0 1em 1em -0.4em var(--contrast-color);
+  }
+}
 .repoCard {
+  
   display: grid;
   grid-template-columns: 70% 30%;
-  grid-template-rows: 25% 1% 59%  15%;
+  grid-template-rows: 25% 1% 59% 15%;
   grid-template-areas: "name name" "hr hr" "desc icons" "language language";
   place-items: center start;
-  padding: 20px;
+  padding: 1.25rem;
   gap: 5px;
   background-color: var(--secondary-color);
   border-radius: 5px;
   height: 230px;
-  
-  
   .name {
-    grid-area: name;
-    height: 100%;
-  }
-  
-  
-  
+      grid-area: name;
+      height: 100%;
+ }
   .desc {
-    grid-area: desc;
-    overflow: auto;
-    max-height: 100%; 
-  }
-
-  
-  
+      grid-area: desc;
+      overflow: auto;
+      max-height: 100%;
+ }
   .icons {
-    grid-area: icons;
-    height: 100%;
-    place-self: stretch center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    
-    p {
-      margin: 5px;
-      font-weight: bold;     
-    }
-  }
-  
-  
+      grid-area: icons;
+      height: 100%;
+      place-self: stretch center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      p {
+          margin: 5px;
+          font-weight: bold;
+     }
+ }
   .language {
-    grid-area: language;
-    height: 100%;
-    span {
-      background-color: var(--secondary-contrast-color);
-      padding: 0.3rem 0.5rem;
-      color: var(--secondary-color);
-      border-radius: 50px;
-      font-weight: bold;
-    }
+      grid-area: language;
+      height: 100%;
+      transition: all 0.3s;
+      span {
+          background-color: var(--secondary-contrast-color);
+          padding: 0.3rem 0.5rem;
+          color: var(--secondary-color);
+          border-radius: 50px;
+          font-weight: bold;
+     }
   }
-}
+ 
+ }
 
 .projectsWrapper {
   margin-left: auto;
@@ -192,14 +177,16 @@ body, html {
   flex-wrap: wrap;
   justify-content: center;
   width: 60%;
-    a {
+  a {
       margin: 30px;
       width: calc(50% - 60px);
       text-decoration: none;
       color: white;
-    }
+ }
+ &:last-child {
+  margin-bottom: 1.5rem;
+ }
 }
-
 .footer {
   width: 100%;
   background-color: var(--secondary-color);
@@ -208,90 +195,79 @@ body, html {
   justify-content: center;
   align-items: center;
   .contactWrapper {
-    width: 60%;
-    background-color: var(--secondary-color);
-    display: flex;
-    justify-content: center;
-    box-sizing: border-box;
-  }
-  
+      width: 60%;
+      background-color: var(--secondary-color);
+      display: flex;
+      justify-content: center;
+      box-sizing: border-box;
+ }
   .contactTitle {
-    background-color: var(--secondary-color);
-    padding: 0.75rem;
-    font-size: 125%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-  }
-  
+      background-color: var(--secondary-color);
+      padding: 0.75rem;
+      font-size: 125%;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif 
+ }
   .contactForm {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    input, textarea {
-      border: none;
-      border-radius: 3px;
-      padding: 10px;
-      resize: vertical;
-      outline: none;
-      box-sizing: content-box;
-      border-bottom: solid 3px transparent;
-      margin: 5px 0;
-      margin-bottom: 1rem;
-    }
-    textarea {
-      height: 130px;
-    }
-    label {
-      font-weight: 600;
-    }
-    input:focus, textarea:focus {
-      border-bottom: solid 3px var(--contrast-color);
-    }
-  }
-  
-  
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      input, textarea {
+          border: none;
+          border-radius: 3px;
+          padding: 10px;
+          resize: vertical;
+          outline: none;
+          box-sizing: content-box;
+          border-bottom: solid 3px transparent;
+          margin: 5px 0;
+          margin-bottom: 1rem;
+     }
+      textarea {
+          height: 130px;
+     }
+      label {
+          font-weight: 600;
+     }
+      input:focus, textarea:focus {
+          border-bottom: solid 3px var(--contrast-color);
+     }
+ }
   .contact {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    .submit__button {
-      background-color: var(--contrast-color);
-    }
-    
-    .contact-list {
-      list-style-type: none;
-      padding-right: 20px;
-    }
-    
-    .list-item {
-      line-height: 4;
-      color: white;
-    }
-    
-    .contact-text {
-      font: 300 16px 'Lato', sans-serif;
-      letter-spacing: 1.9px;
-      color: white;
-      transition: all 0.3s;
-      text-align: center;
-    }
-    
-    .place {
-      margin-left: 32px;
-    }
-    
-    .phone {
-      margin-left: 25px;
-    }
-    
-    .gmail {
-      margin-left: 26px;
-    }
-  }
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      .submit__button {
+          background-color: var(--contrast-color);
+     }
+      .contact-list {
+          list-style-type: none;
+          padding-right: 20px;
+     }
+      .list-item {
+          line-height: 4;
+          color: white;
+     }
+      .contact-text {
+          font: 300 16px 'Lato', sans-serif;
+          letter-spacing: 1.9px;
+          color: white;
+          transition: all 0.3s;
+          text-align: center;
+     }
+      .place {
+          margin-left: 32px;
+     }
+      .phone {
+          margin-left: 25px;
+     }
+      .gmail {
+          margin-left: 26px;
+     }
+ }
 }
-
 .about {
   width: 100%;
   background-color: var(--secondary-color);
@@ -300,42 +276,41 @@ body, html {
   justify-content: center;
   align-items: center;
   .aboutTitle {
-    padding: 0.75rem;
-    font-size: 150%;
-    letter-spacing: 0.5rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    border-bottom: 3px  solid var(--contrast-color);
-    margin: 2rem;
-    h1 {
-      margin: 0;
-    }
-  }
-  
+      padding: 0.75rem;
+      font-size: 150%;
+      letter-spacing: 0.5rem;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      text-align: center;
+      border-bottom: 3px solid var(--contrast-color);
+      margin: 2rem;
+      h1 {
+          margin: 0;
+     }
+ }
   .aboutWrapper {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    box-sizing: border-box;
-    margin: 2rem;
-  }
-  
+      width: 70%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      box-sizing: border-box;
+      margin: 2rem;
+ }
   .aboutImage {
-    padding: 1.3rem;
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
-  
-  }
+      padding: 1.3rem;
+      img {
+          max-width: 100%;
+          max-height: 100%;
+     }
+ }
   .aboutText {
-    padding: 1.3rem;
-    text-align: justify;
-  }
+      padding: 1.3rem;
+      text-align: justify;
+      a {
+          color: var(--secondary-contrast-color);
+     }
+ }
 }
-
 .exp {
   width: 100%;
   background-color: var(--main-color);
@@ -343,129 +318,184 @@ body, html {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-
   .expTitle {
-    padding: 0.55rem;
-    font-size: 125%;
-    letter-spacing: 0.1rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-    margin: 1.5rem;
-    h2 {
-      margin: 0;
-    }
-  }
-
-  .expWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 70%;
-  }
-
-  .expText {
-    width: 100%;
-    text-align: justify;
-    font-size: 120%;
-    padding: 1rem;
-    box-sizing: border-box;
-    border-bottom: 3px solid var(--contrast-color);
-    padding-bottom: 2rem;
-  }
-
-  .expTile {
-    height: 150px;
-    background-color: var(--secondary-color);
-    width: 280px;
-    margin: 1rem;
-    border-radius: 5px;
-    padding: 0.5rem;
-    display: grid;
-    grid-template-columns: 59% 1% 40%;
-    grid-template-rows: 25% 75%;
-    grid-template-areas: "name hr level" "img hr level";
-    place-items: center start;
-    padding: 20px;
-    gap: 5px;
-    
-    .expImg {
-      grid-area: img;
-      display: flex;
-      align-items: center; 
-      justify-content: center;
-      place-self: stretch;
-      img {
-        max-height: 90%;
-        width: auto;
-      }
-    }
-    .expName {
-      grid-area: name;
-      text-align: center;
-      width: 100%;
+      padding: 0.55rem;
       font-size: 125%;
-    }
-    .expDots {
+      letter-spacing: 0.1rem;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      text-align: center;
+      margin: 1.5rem;
+      h2 {
+          margin: 0;
+     }
+ }
+  .expWrapper {
       display: flex;
-      grid-area: level;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      flex-wrap: wrap;
+      width: 70%;
+ }
+  .expText {
+      width: 100%;
+      text-align: justify;
+      font-size: 120%;
+      padding: 1rem;
+      box-sizing: border-box;
+      border-bottom: 3px solid var(--contrast-color);
+      padding-bottom: 2rem;
+ }
+  .expTile {
+      height: 150px;
+      background-color: var(--secondary-color);
+      width: 280px;
+      margin: 1rem;
+      border-radius: 5px;
+      padding: 0.5rem;
+      display: grid;
+      grid-template-columns: 59% 1% 40%;
+      grid-template-rows: 25% 75%;
+      grid-template-areas: "name hr level" "img hr level";
+      place-items: center start;
+      padding: 1.25rem;
+      gap: 5px;
+      .expImg {
+          grid-area: img;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          place-self: stretch;
+          img {
+              max-height: 90%;
+              width: auto;
+         }
+     }
+      .expName {
+          grid-area: name;
+          text-align: center;
+          width: 100%;
+          font-size: 125%;
+     }
+      .expDots {
+          display: flex;
+          grid-area: level;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+     }
+      .expDotLang {
+          display: flex;
+          justify-self: center;
+          grid-area: level;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          border-radius: 999px;
+          padding: 0.5rem;
+          font-size: 125%;
+     }
+      .langImg {
+          max-width: 90%;
+          max-height: 90%;
+     }
+      .dot {
+          width: 23px;
+          height: 23px;
+          border-radius: 50%;
+          margin: 0.28rem;
+     }
+      .novice, .beginner, .intermediate, .advanced, .master, .expDotLang {
+          background-color: var(--secondary-contrast-color);
+     }
+      .dimmed {
+          background-color: var(--main-color);
+     }
+ }
+  .expCategory {
+      display: flex;
+      width: 100%;
+      margin: 0 0 1.5rem;
+      padding: 1.5rem;
+      justify-content: center;
+      flex-wrap: wrap;
+      align-items: center;
+      border-bottom: 3px solid var(--contrast-color);
+      h3 {
+          width: 100%;
+          text-align: center;
+          margin: 0;
+          margin-bottom: 0.5rem;
+     }
+      &:last-child {
+          border: none;
+     }
+ }
+}
+.goals {
+  width: 100%;
+  background-color: var(--main-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .goalsTitle {
+      padding: 0.75rem;
+      font-size: 150%;
+      letter-spacing: 0.5rem;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      text-align: center;
+      border-bottom: 3px solid var(--contrast-color);
+      margin: 2rem;
+      h1 {
+          margin: 0;
+     }
+ }
+  .goalsWrapper {
+      width: 75%;
+      padding: 1.25rem;
+      box-sizing: border-box;
+      margin: 2rem;
+      display: flex;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      width: 100%;
-
-    }
-
-    .expDotLang {
+ }
+  .goalsSection {
+      width: 300px;
+      height: 300px;
+      background-color: var(--secondary-color);
+      margin: 1rem;
       display: flex;
-      justify-self: center;
-      grid-area: level;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      border-radius: 999px;
-      padding: 0.5rem;
-      font-size: 125%;
-            
-    }
-    .langImg {
-      max-width: 90%;
-      max-height: 90%;
-    }
-
-    .dot {
-      width: 23px;
-      height: 23px;
-      border-radius: 50%;
-      margin: 0.28rem;
-    }
-    .novice, .beginner, .intermediate, .advanced, .master, .expDotLang {
-      background-color: var(--secondary-contrast-color); 
-    }
-    
-    .dimmed {
-      background-color: var(--main-color);
-    }
-  }
-
-  .expCategory {
-    display: flex;
-    width: 100%;
-    margin: 0 0 1.5rem;
-    padding: 1.5rem;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    border-bottom: 3px solid var(--contrast-color);
-    h3 {
-      width: 100%;
-      text-align: center;
-      margin: 0;      
-      margin-bottom: 0.5rem;
-    }
-    &:last-child {
-      border: none;
-    }
-  }
+      flex-direction: column;
+      .sectionTitle {
+          width: 100%;
+          text-align: center;
+          border-bottom: 2px solid var(--contrast-color);
+          h2 {
+              margin: 1rem;
+              font-size: 120%;
+         }
+     }
+      img {
+          max-width: 80%;
+          height: auto;
+     }
+      .goalsList {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          height: 100%;
+     }
+      span {
+          svg{
+              fill: rgba(0,0,0,1) 
+         }
+     }
+ }
+}
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 var(--contrast-color); }
 }
