--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -63,7 +63,7 @@ body, html {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center;
-  background-size: 100vw;
+  background-size: 100vw 100vh;
   overflow: hidden;
   text-align: center;
 }
@@ -498,4 +498,111 @@ body, html {
 }
 @keyframes pulse {
   0% { box-shadow: 0 0 0 0 var(--contrast-color); }
+}
+
+@media only screen and (max-width: 980px) {
+
+  .exp {
+    .expWrapper {
+      width: 90%;
+      .expText {
+        padding: 0;
+        width: auto;
+      }
+    }
+  }
+  .about{
+    .aboutWrapper {
+      flex-direction: column;
+    }
+  }
+
+  .projectsWrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    a {
+      width: 80%;
+      height: auto;
+    }
+  }
+  .contactWrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .contactForm {
+      width: 80%;
+    }
+  }
+}
+@media only screen and (max-width: 500px) {
+  .goalsList {
+    overflow: scroll;
+  }
+  .projectsWrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+    a {
+      width: 90%;
+      height: auto;
+    }
+  }
+  .footer {
+    .contactWrapper {
+      width: 95%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      .contactForm {
+        width: 80%;
+      }
+      .contact {
+        width: 90%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .projectsWrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+    a {
+      width: 90%;
+      height: auto;
+      font-size: 90%;
+    }
+    .repoCard {
+      display: flex;
+      flex-direction: column;
+      .desc {
+        overflow:visible;
+      }
+      .hr {
+        display: none;
+      }
+    }
+  }
+  .footer {
+    .contactWrapper {
+      width: 95%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      .contactForm {
+        width: 80%;
+      }
+      .contact {
+        width: 90%;
+      }
+    }
+  }
 }
